--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <title>3D Builder</title>
-
-    <link href="/src/styles.css" rel="stylesheet">
+    <link href="/src/App.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
