social share update

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/ly3d.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Builder</title>
-    <link href="/src/App.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/ico" href="/ly3d.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="LY 3D Builder" />
+  <meta property="og:description" content="3D Builder Example" />
+  <meta property="og:image" content="/ly3d.webp" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="LY 3D Builder" />
+  <meta name="twitter:description" content="3D Builder Example" />
+  <meta name="twitter:image" content="/ly3d.webp" />
+  <title>3D Builder</title>
+  <link href="/src/App.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
